<resources>
    <string name="app_name">Bluetooth Mesh</string>
    <string name="dialog_positive_ok">OK</string>
    <string name="dialog_positive_delete">Delete</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_retry">Retry</string>
    <string name="subnets_adapter_empty_list_title">No subnets</string>
    <string name="subnets_adapter_empty_list_message">Tap + to add a new subnet.</string>
    <plurals name="subnets_adapter_devices_label">
        <item quantity="one">%1$d device</item>
        <item quantity="other">%1$d devices</item>
    </plurals>
    <plurals name="subnets_adapter_appkeys_label">
        <item quantity="one">%1$d appkey</item>
        <item quantity="other">%1d appkeys</item>
    </plurals>
    <string name="device_scanner_turn_on_scan">Scan</string>
    <string name="device_scanner_turn_off_scan">Stop</string>
    <string name="menu_about_bluetooth_mesh">About Bluetooth Mesh</string>
    <string name="menu_licenses">Licenses</string>
    <string name="menu_export_cryptographic_keys">Export cryptographic keys</string>
    <string name="menu_export_logs">Export logs</string>
    <string name="menu_export_cryptographic_keys_message">Select if you want to share your cryptographic keys or save them to your phone storage.</string>
    <string name="menu_export_export_import">Export Import</string>
    <string name="subnet_dialog_delete_title">Delete subnet</string>
    <string name="subnet_dialog_delete_message">Are you sure?</string>
    <string name="subnet_dialog_delete_locally_title">Delete locally?</string>
    <string name="subnet_dialog_delete_locally_message">%1$s\nDo you want to delete %2$s from the app?</string>
    <string name="subnet_dialog_loading_text_removing_subnet">Removing subnet %1$s</string>
    <string name="subnet_dialog_loading_text_connecting_to_subnet">Connecting to subnet %1$s</string>
    <string name="subnet_dialog_share_keys_button">Share</string>
    <string name="subnet_dialog_save_keys_to_file_button">Save to file</string>
    <string name="app_keys_adapter_empty_list_title">No AppKeys</string>
    <string name="app_keys_adapter_empty_list_message">Tap + to add a new AppKey.</string>
    <plurals name="app_keys_adapter_devices_label">
        <item quantity="one">%1$d device</item>
        <item quantity="other">%1$d devices</item>
    </plurals>
    <string name="appkey_dialog_delete_title">Delete selected?</string>
    <string name="appkey_dialog_delete_locally_title">Delete locally?</string>
    <string name="appkey_dialog_delete_locally_message">%1$s\nDo you want to delete %2$s from the app?</string>
    <string name="appkey_dialog_loading_text_removing_appkey">Removing AppKey %1$s</string>
    <string name="scanner_adapter_empty_list_title">No devices</string>
    <string name="scanner_adapter_empty_list_message_idle">Tap Scan to start searching for Bluetooth mesh devices.</string>
    <string name="scanner_adapter_empty_list_message_scanning">Scanning for Bluetooth mesh devices…</string>
    <string name="remote_scanning_appbar_title">Remote Provisioning</string>
    <string name="devices_dialog_delete_title">Delete selected?</string>
    <string name="devices_dialog_delete_from_proxy_message">One of the selected devices is a proxy. You will be disconnected.</string>
    <string name="device_dialog_delete_locally_title">Delete locally?</string>
    <string name="device_dialog_delete_locally_message">%1$s\nDo you want to delete %2$s from the app?</string>
    <string name="device_dialog_config_page_title">Configuration</string>
    <string name="device_dialog_config_dcd_warning">Composition Data not available</string>
    <string name="device_dialog_config_name_label">Name</string>
    <string name="device_dialog_config_proxy_label">Proxy</string>
    <string name="device_dialog_config_relay_label">Relay</string>
    <string name="device_dialog_config_friend_label">Friend</string>
    <string name="device_dialog_config_send_ae_label">Send Advertisement Extension messages</string>
    <string name="device_dialog_config_retransmission_label">Retransmission</string>
    <string name="device_dialog_config_appkey_label">AppKey</string>
    <string name="device_dialog_config_low_power_label">Low Power</string>
    <string name="device_dialog_config_low_power_supported">Is supported</string>
    <string name="device_dialog_config_functionality_label">Functionality</string>
    <string name="device_dialog_info_page_title">Info</string>
    <string name="device_dialog_info_device_category_label">Device</string>
    <string name="device_dialog_info_device_name_label">Name</string>
    <string name="device_dialog_info_address_label">Unicast Address</string>
    <string name="device_dialog_info_uuid_label">UUID</string>
    <string name="device_dialog_info_keys_category_label">Keys</string>
    <string name="device_dialog_info_models_category_label">Models</string>
    <string name="device_dialog_info_net_key_label">NetKey</string>
    <string name="device_dialog_info_app_key_label">AppKey</string>
    <string name="device_dialog_info_dev_key_label">DevKey</string>
    <string name="device_dialog_info_table_first_col_label">Element</string>
    <string name="device_dialog_info_table_second_col_label">Vendor</string>
    <string name="device_dialog_info_table_third_col_label">ID</string>
    <string name="device_dialog_info_table_fourth_col_label">Description</string>
    <string name="device_dialog_poll_timeout_label">Poll Timeout for Friend</string>
    <string name="device_dialog_poll_timeout_value">%1$s s</string>
    <string name="device_dialog_poll_timeout_value_unknown">--- s</string>
    <string name="device_dialog_lpn_timeout_label">Global Low Power Timeout</string>
    <string name="device_dialog_lpn_set_label">Set</string>
    <string name="device_dialog_lpn_hint">Timeout to set in seconds</string>
    <string name="device_dialog_lpn_value_label">Current timeout: %1$s s</string>
    <string name="device_dialog_friend_null">No node selected</string>
    <string name="device_config_connecting">Connecting with device</string>
    <string name="device_config_disconnected">Disconnected from network</string>
    <string name="device_config_adding_appkey">Adding %1$s to node</string>
    <string name="device_config_removing_appkey">Removing %1$s from node</string>
    <string name="device_config_proxy_enabling">Enabling proxy</string>
    <string name="device_config_proxy_disabling">Disabling proxy</string>
    <string name="device_config_proxy_getting">Getting proxy status</string>
    <string name="device_config_proxy_disable_attention_title">Attention</string>
    <string name="device_config_proxy_disable_attention_message">Disabling this proxy will cause you to lose access to the network. Continue anyways?</string>
    <string name="device_config_model_adding">Adding model 0x%1$s</string>
    <string name="device_config_model_removing">Removing model 0x%1$s</string>
    <string name="device_config_subscription_adding">Adding subscription: 0x%1$s</string>
    <string name="device_config_subscription_removing">Removing subscription: 0x%1$s</string>
    <string name="device_config_publication_setting">Setting publication: 0x%1$s</string>
    <string name="device_config_publication_clearing">Clearing publication: 0x%1$s</string>
    <string name="device_config_functionality_changing">Changing functionality</string>
    <string name="device_config_friend_enabling">Enabling friend</string>
    <string name="device_config_friend_disabling">Disabling friend</string>
    <string name="device_config_friend_getting">Getting friend status</string>
    <string name="device_config_retransmission_enabling">Enabling retransmission</string>
    <string name="device_config_retransmission_disabling">Disabling retransmission</string>
    <string name="device_config_retransmission_getting">Getting retransmission status</string>
    <string name="device_config_relay_enabling">Enabling relay</string>
    <string name="device_config_relay_disabling">Disabling relay</string>
    <string name="device_config_relay_getting">Getting relay status</string>
    <string name="device_config_select_appkey_first">Please select an AppKey first</string>
    <string name="device_config_poll_timeout_getting">Getting poll timeout status</string>
    <string name="device_config_poll_timeout_updated">Poll timeout updated</string>
    <string name="device_config_poll_timeout_not_friend">%s is not a Friend</string>
    <string name="device_config_lpn_timeout_setting">Setting LPN global timeout</string>
    <string name="device_config_lpn_timeout_getting">Getting LPN global timeout</string>
    <string name="device_config_lpn_timeout_wrong_range">Timeout should be in range: 0–2147483 s</string>
    <string name="device_config_dcd_getting">Getting Composition Data</string>
    <string name="device_config_AE_setting_configuration">Setting Advertisement Extension configuration</string>
    <string name="device_config_AE_setting_pdu">Setting Network PDU size</string>
    <string name="device_config_AE_enabling">Enabling Advertisement Extension on model 0x%1$s</string>
    <string name="device_config_AE_disabling">Disabling Advertisement Extension on model 0x%1$s</string>
    <string name="device_config_AE_getting">Getting Advertisement Extension setting status on model 0x%1$s</string>
    <string name="control_group_device_master_control_label">Master Control</string>
    <string name="control_group_device_devices_label">Devices</string>
    <string name="control_group_device_switch_label">Switch</string>
    <string name="control_group_device_light_label">Light</string>
    <string name="scanner_adapter_rssi">%d dBm</string>
    <string name="scanner_adapter_provision">Provision</string>
    <string name="scanner_adapter_uuid">UUID:\u00A0%s</string>
    <string name="scanner_adapter_no_subnet_on_provisioning">You have to have at least one subnet to provision a device</string>
    <string name="cbp_use_certificate_based_provisioning">Use Certificate-based Provisioning</string>
    <string name="cbp_obtain_certificate_from_device">Obtain certificate from the device</string>
    <string name="cbp_use_certificate_from_file">Use certificate from file</string>
    <string name="cbp_device_certificate">DEVICE CERTIFICATE</string>
    <string name="cbp_root_certificate">ROOT CERTIFICATE</string>
    <string name="cbp_select_certificate">Select certificate</string>
    <string name="dialog_about_app_version">Application version: %s</string>
    <string name="dialog_about_adk_version">ADK version: %s</string>
    <string name="dialog_about_copyright">Copyright \u00A9 2019–%d Silicon Labs\nAll rights reserved</string>
    <string name="distribution_upload_progress">Upload progress:</string>
    <string name="standalone_use_advertisement_extension">Use Advertisement Extension</string>
    <string name="standalone_current_firmware">CURRENT FIRMWARE</string>
    <string name="standalone_new_firmware">NEW FIRMWARE</string>
    <string name="standalone_version">Version</string>
    <string name="standalone_pick_a_file">Pick a file</string>
    <string name="standalone_current_progress">CURRENT PROGRESS</string>
    <string name="standalone_progress_upload">Upload</string>
    <string name="standalone_progress_verification">Verification</string>
    <string name="standalone_progress_applying">Applying</string>
    <string name="standalone_progress_default">--</string>
    <string name="standalone_button_upload_and_apply">Upload and apply</string>
    <string name="upload_is_starting">Upload is starting</string>
    <string name="upload_done">Done</string>
    <string name="connection_was_interrupted">Connection was interrupted</string>
    <string name="error">Error</string>
    <string name="errors">Errors</string>
</resources>