<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2021 Silicon Labs, http://www.silabs.com. All rights reserved.
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/connection_was_interrupted"
            android:textSize="@dimen/text_size_normal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_confirm_disconnection_of_distributor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:text="@string/dialog_positive_ok" />

    </LinearLayout>
</androidx.cardview.widget.CardView>