<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2019 Silicon Labs, http://www.silabs.com. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/adapter_layout_padding">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/adapter_layout_padding"
            android:adjustViewBounds="false"
            android:padding="@dimen/adapter_item_padding"
            app:srcCompat="@drawable/silicon_labs_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/adapter_item_padding"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_xlarge" />

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/adapter_item_padding"
                tools:text="@string/dialog_about_app_version" />

            <TextView
                android:id="@+id/tv_adk_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/adapter_item_padding"
                tools:text="@string/dialog_about_adk_version" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_copyright_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        tools:text="@string/dialog_about_copyright" />
</LinearLayout>
