<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2022 Silicon Labs, http://www.silabs.com. All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/current_firmware_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/standalone_current_firmware"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/standalone_version"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_firmware_header" />

    <TextView
        android:id="@+id/tv_firmware_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_firmware_header"
        tools:text="1.2.3" />

    <View
        android:id="@+id/current_firmware_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/adapter_item_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_firmware_version" />

    <TextView
        android:id="@+id/new_firmware_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/standalone_new_firmware"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_firmware_divider" />

    <LinearLayout
        android:id="@+id/wrapper_firmware_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/wrapper_color"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_firmware_header">

        <TextView
            android:id="@+id/tv_firmware_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/standalone_pick_a_file"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <View
        android:id="@+id/new_firmware_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/adapter_item_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wrapper_firmware_picker" />

    <TextView
        android:id="@+id/current_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/standalone_current_progress"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/new_firmware_divider" />

    <TextView
        android:id="@+id/tv_upload_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/standalone_progress_upload"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_progress" />

    <TextView
        android:id="@+id/tv_upload_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/standalone_progress_default"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:lines="1"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_upload_label"
        app:layout_constraintStart_toEndOf="@id/tv_upload_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_verification_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/standalone_progress_verification"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_upload_label" />

    <TextView
        android:id="@+id/tv_verification_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/standalone_progress_default"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:lines="1"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_verification_label"
        app:layout_constraintStart_toEndOf="@id/tv_verification_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_applying_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/standalone_progress_applying"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verification_label" />

    <TextView
        android:id="@+id/tv_applying_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/standalone_progress_default"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:lines="1"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_applying_label"
        app:layout_constraintStart_toEndOf="@id/tv_applying_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/error_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/adapter_item_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_applying_label" />

    <TextView
        android:id="@+id/tv_error_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/errors"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_divider"/>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_header"
        tools:text="ErrorType Couldn't parse firmware file." />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_error_display"
        app:constraint_referenced_ids="error_divider, tv_error_header, tv_error"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/tv_reconnecting_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/current_progress_divider"
        android:text="@string/device_config_connecting"/>

    <View
        android:id="@+id/current_progress_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/adapter_item_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/switch_use_advertisement_extension" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_use_advertisement_extension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standalone_use_advertisement_extension"
        android:textColor="@color/dialog_device_config_category_label"
        app:layout_constraintBottom_toTopOf="@+id/button_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:switchPadding="@dimen/dialog_config_item_padding" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:lines="1"
        android:enabled="false"
        android:text="@string/standalone_button_upload_and_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>